@@ -129,6 +129,14 @@ along with this software (see the LICENSE.md file). If not, see
         <alias name="quantityTotal" entity-alias="ASIS" field="quantity" function="sum"/>
         <alias name="quantityCancelledTotal" entity-alias="ASIS" field="quantityCancelled" function="sum"/>
     </view-entity>
+    <view-entity entity-name="ShipmentAndItemSource" package-name="mantle.shipment">
+        <member-entity entity-alias="SIS" entity-name="mantle.shipment.ShipmentItemSource"/>
+        <member-entity entity-alias="SHMT" entity-name="mantle.shipment.Shipment" join-from-alias="SIS">
+            <key-map field-name="shipmentId"/></member-entity>
+        <alias-all entity-alias="SIS"/>
+        <alias-all entity-alias="SHMT"><exclude field="statusId"/></alias-all>
+        <alias name="shipmentStatusId" entity-alias="SHMT" field="statusId"/>
+    </view-entity>
     <view-entity entity-name="ShipmentRouteSegmentDetail" package-name="mantle.shipment">
         <member-entity entity-alias="SHRS" entity-name="mantle.shipment.ShipmentRouteSegment"/>
         <member-entity entity-alias="STSI" entity-name="moqui.basic.StatusItem" join-from-alias="SHRS" join-optional="true">
