@@ -488,8 +488,7 @@ along with this software (see the LICENSE.md file). If not, see
                         systemMessageRemoteId:orderHeader.systemMessageRemoteId]"/>
 
             <if condition="createPackage">
-                <service-call name="create#mantle.shipment.ShipmentPackage" in-map="context" out-map="context"/>
-            </if>
+                <service-call name="create#mantle.shipment.ShipmentPackage" in-map="context" out-map="context"/></if>
             <if condition="createRouteSegment">
                 <service-call name="create#mantle.shipment.ShipmentRouteSegment" out-map="context"
                         in-map="[shipmentId:shipmentId, carrierPartyId:carrierPartyId,
@@ -523,42 +522,58 @@ along with this software (see the LICENSE.md file). If not, see
             <entity-find-related value-field="orderPart" relationship-name="mantle.order.OrderItem" list="orderItemList"
                     order-by-list="['orderItemSeqId']"/>
             <iterate list="orderItemList" entry="orderItem">
-                <if condition="orderItem.productId">
-                    <!-- see if Product is a physical item -->
-                    <entity-find-one entity-name="mantle.product.Product" value-field="product" cache="true">
-                        <field-map field-name="productId" from="orderItem.productId"/></entity-find-one>
+                <!-- if no productId skip it -->
+                <if condition="!orderItem.productId"><continue/></if>
 
-                    <if condition="product.productTypeEnumId in ['PtAsset', 'PtDigitalAsset', 'PtAssetUse']">
-                        <entity-find-one entity-name="mantle.shipment.ShipmentItem" value-field="shipmentItem">
-                            <field-map field-name="shipmentId"/><field-map field-name="productId" from="orderItem.productId"/></entity-find-one>
-                        <if condition="shipmentItem"><then>
-                            <set field="shipmentItem.quantity" from="shipmentItem.quantity + orderItem.quantity"/>
-                            <entity-update value-field="shipmentItem"/>
-                        </then><else>
-                            <service-call name="create#mantle.shipment.ShipmentItem"
-                                    in-map="[shipmentId:shipmentId, productId:orderItem.productId, quantity:orderItem.quantity]"/>
-                        </else></if>
+                <!-- see if Product is a physical item -->
+                <entity-find-one entity-name="mantle.product.Product" value-field="product" cache="true">
+                    <field-map field-name="productId" from="orderItem.productId"/></entity-find-one>
+                <if condition="!(product.productTypeEnumId in ['PtAsset', 'PtDigitalAsset', 'PtAssetUse'])"><continue/></if>
 
-                        <service-call name="create#mantle.shipment.ShipmentItemSource"
-                                in-map="[shipmentId:shipmentId, productId:orderItem.productId, statusId:'SisPending',
-                                quantity:orderItem.quantity, quantityNotHandled:orderItem.quantity,
-                                orderId:orderItem.orderId, orderItemSeqId:orderItem.orderItemSeqId]"/>
+                <!-- determine quantityNotShipped -->
+                <set field="quantityNotShipped" from="(orderItem.quantity ?: 1) * (orderItem.selectedAmount ?: 1)"/>
+                <entity-find entity-name="mantle.shipment.ShipmentAndItemSource" list="existingSisList">
+                    <econdition field-name="orderId"/><econdition field-name="orderItemSeqId" from="orderItem.orderItemSeqId"/>
+                    <econdition field-name="shipmentStatusId" operator="not-in" value="ShipRejected,ShipCancelled"/>
+                    <econdition field-name="statusId" operator="not-equals" value="SisCancelled"/>
+                </entity-find>
+                <iterate list="existingSisList" entry="existingSis">
+                    <set field="quantityNotShipped" from="quantityNotShipped - existingSis.quantity"/></iterate>
 
-                        <!-- for mantle.order.OrderItemBilling set the invoiceId/invoiceItemSeqId on it -->
-                        <set field="quantityNotBilled" from="orderItem.quantity"/>
-                        <entity-find entity-name="mantle.order.OrderItemBilling" list="orderItemBillingList">
-                            <econdition field-name="orderId"/><econdition field-name="orderItemSeqId" from="orderItem.orderItemSeqId"/>
-                        </entity-find>
-                        <iterate list="orderItemBillingList" entry="orderItemBilling">
-                            <if condition="!orderItemBilling.shipmentId &amp;&amp; quantityNotBilled >= orderItemBilling.quantity">
-                                <set field="orderItemBilling.shipmentId" from="shipmentId"/>
-                                <entity-update value-field="orderItemBilling"/>
-                                <set field="quantityNotBilled" from="quantityNotBilled - orderItemBilling.quantity"/>
-                            </if>
-                        </iterate>
-                        <!-- if quantityNotBilled > 0 do anything here? we don't have another Invoice/Item with quantity to match... -->
+                <!-- if no quantity not shipped skip the item -->
+                <if condition="quantityNotShipped &lt;= 0"><continue/></if>
+
+                <!-- add or update the ShipmentItem record for the productId -->
+                <entity-find-one entity-name="mantle.shipment.ShipmentItem" value-field="shipmentItem">
+                    <field-map field-name="shipmentId"/><field-map field-name="productId" from="orderItem.productId"/></entity-find-one>
+                <if condition="shipmentItem"><then>
+                    <set field="shipmentItem.quantity" from="shipmentItem.quantity + quantityNotShipped"/>
+                    <entity-update value-field="shipmentItem"/>
+                </then><else>
+                    <service-call name="create#mantle.shipment.ShipmentItem"
+                            in-map="[shipmentId:shipmentId, productId:orderItem.productId, quantity:quantityNotShipped]"/>
+                </else></if>
+
+                <!-- create the ShipmentItemSource to associate the OrderItem with the Shipment -->
+                <service-call name="create#mantle.shipment.ShipmentItemSource"
+                        in-map="[shipmentId:shipmentId, productId:orderItem.productId, statusId:'SisPending',
+                            quantity:quantityNotShipped, quantityNotHandled:quantityNotShipped,
+                            orderId:orderItem.orderId, orderItemSeqId:orderItem.orderItemSeqId]"/>
+
+                <!-- set shipmentId on existing OrderItemBilling records -->
+                <set field="quantityNotBilled" from="(orderItem.quantity ?: 1) * (orderItem.selectedAmount ?: 1)"/>
+                <entity-find entity-name="mantle.order.OrderItemBilling" list="orderItemBillingList">
+                    <econdition field-name="orderId"/><econdition field-name="orderItemSeqId" from="orderItem.orderItemSeqId"/>
+                </entity-find>
+                <iterate list="orderItemBillingList" entry="orderItemBilling">
+                    <if condition="!orderItemBilling.shipmentId &amp;&amp; quantityNotBilled >= orderItemBilling.quantity">
+                        <set field="orderItemBilling.shipmentId" from="shipmentId"/>
+                        <entity-update value-field="orderItemBilling"/>
+                        <set field="quantityNotBilled" from="quantityNotBilled - orderItemBilling.quantity"/>
                     </if>
-                </if>
+                    <!-- TODO if orderItemBilling.shipmentId set split OrderItemBilling by Shipment quantities? -->
+                </iterate>
+                <!-- if quantityNotBilled > 0 do anything here? we don't have another Invoice/Item with quantity to match... -->
             </iterate>
         </actions>
     </service>
