@@ -21,6 +21,9 @@ New Features
   periods, opposite of the corresponding open service; requires the
   FISCAL_REOPEN permission
 - The approve#Order service now requires the ORDER_APPROVE permission
+- In add#OrderPartToShipment only item quantities not yet associated with a
+  Shipment (not shipped quantities) are added
+- OrderDisplayInfo now gets quantity not shipped, billed by item and part
 
 Bug Fixes
 
